--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ body {
     padding: 85px 20px 50px 20px;
     font-family: Poppins;
     overflow-x:hidden;
+    height: 100vh;
 }
 
 .header > h1 {
@@ -149,10 +150,9 @@ body {
     }
 }
 
-
 footer {
     position: absolute;
-    bottom: 0;
+    bottom: 10px;
     text-align: center;
     font-size: 11px;
 }
